Distribute Points in Volume node not refreshing on frame change #101215

Closed
opened 2022-09-20 12:55:46 +02:00 by Steffen Dünner · 6 comments

System Information
Operating system: Linux-5.15.0-47-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-20 10:20, hash: 22efaa2e7b
Worked: (newest version of Blender that worked as expected)

Short description of error
The very recent "Distribute Points in Volume" node is an important addition to the volume toolset of Geometry Nodes.
The first thing I tried though was to add a Geometry Nodes Modifier to a Volume Object with a VDB sequence and to add a Distribute Points in Volume node.
Points get scattered nicely, both modes work but as soon as I change the current frame the points disappear.
Changing the seed or the density after the frame change doesn't cause a refresh. Only when I mute and unmute the node the points reappear.

Exact steps for others to reproduce the error

  • Download, unpack and open the attached archive - It contains a simple scene and 2 VDBs containing a "density" field.
  • Mute and unmute the "Distribute Points in Volume" node (using the M key) - Points get scattered
  • Change the frame from 1 to 2 - Viewport is empty
  • Mute and unmute the "Distribute Points in Volume" node (using the M key) - Points show up.
  • Change the frame back to 1 again - Points are gone
  • Rinse and repeat
    Points_Volume_Bug.zip
**System Information** Operating system: Linux-5.15.0-47-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.65.01 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-20 10:20, hash: `22efaa2e7b` Worked: (newest version of Blender that worked as expected) **Short description of error** The very recent "Distribute Points in Volume" node is an important addition to the volume toolset of Geometry Nodes. The first thing I tried though was to add a Geometry Nodes Modifier to a Volume Object with a VDB sequence and to add a Distribute Points in Volume node. Points get scattered nicely, both modes work but as soon as I change the current frame the points disappear. Changing the seed or the density after the frame change doesn't cause a refresh. Only when I mute and unmute the node the points reappear. **Exact steps for others to reproduce the error** - Download, unpack and open the attached archive - It contains a simple scene and 2 VDBs containing a "density" field. - Mute and unmute the "Distribute Points in Volume" node (using the M key) - Points get scattered - Change the frame from 1 to 2 - Viewport is empty - Mute and unmute the "Distribute Points in Volume" node (using the M key) - Points show up. - Change the frame back to 1 again - Points are gone - Rinse and repeat [Points_Volume_Bug.zip](https://archive.blender.org/developer/F13527486/Points_Volume_Bug.zip)

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report, I can confirm the problem.

Thanks for the report, I can confirm the problem.

This issue was referenced by 5e0e5b1341

This issue was referenced by 5e0e5b13410350166553256272311774acd5aaa4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-10-20 18:03:27 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101215
No description provided.