Fix T101215: Distribute Points in Volume node does not refresh on frame change