source/blender/nodes/geometry/nodes/node_geo_distribute_points_in_volume.cc
@@ -208,6 +208,7 @@ static void geo_node_distribute_points_in_volume_exec(GeoNodeExecParams params)
     }
     const VolumeComponent *component = geometry_set.get_component_for_read<VolumeComponent>();
     const Volume *volume = component->get_for_read();
+    BKE_volume_load(volume, DEG_get_bmain(params.depsgraph()));
 
     Vector<float3> positions;
 
